# LEAP

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
calibration/: __init__.py  base.py
exp/: bootstrap.py  config.py  ctdiff.py  env.py  main.py  plot.py  qerr.py  sample_size.py  table.py  times.py  util.py
leap/: __init__.py  commons.py  dataset.py  environment.py  table.py
leap/calibration/: __init__.py  lascal.py
leap/data/: datasets.py  util.py
leap/experiments/: CD.py  generators.py  plot_slides.py  plotting.py  report.py  run.py  tables.py  util.py
leap/models/: base.py  cont_table.py  direct.py  utils.py
leap/plot/: __init__.py  seaborn.py
leap/utils/: commons.py
output/tables/tables/: binary_LR_vanilla_accuracy_table.tex  binary_MLP_vanilla_accuracy_table.tex  binary_SVM_vanilla_accuracy_table.tex  binary_kNN_vanilla_accuracy_table.tex  multiclass_LR_vanilla_accuracy_table.tex  multiclass_MLP_vanilla_accuracy_table.tex  multiclass_SVM_vanilla_accuracy_table.tex  multiclass_kNN_vanilla_accuracy_table.tex
phd/: __init__.py  dataset.py
phd/experiments/: generators.py  plotting.py  report.py  run.py  tables.py  util.py
phd/models/: cont_table.py  direct.py
phd/plot/: seaborn.py
phd/utils/: commons.py
results/binary/KNN/vanilla_accuracy/balance.1/: ATC.json  DoC.json  LEAP-plus.json  LEAP.json  Naive.json
results/binary/KNN/vanilla_accuracy/balance.3/: ATC.json  DoC.json  LEAP-plus.json  LEAP.json  Naive.json
results/binary/KNN/vanilla_accuracy/breast-cancer/: ATC.json  DoC.json  LEAP-plus.json  LEAP.json  Naive.json
(+3925 files in other folders)
